testsuite/tests/ghc-regress/typecheck/should_fail/all.T

include ($confdir ++ "/../vanilla-test.T")

-- Args to vtf are: extra compile flags

test "tcfail001" { vtf("") }
test "tcfail002" { vtf("") }
test "tcfail003" { vtf("") }
test "tcfail004" { vtf("") }
test "tcfail005" { vtf("") }
test "tcfail006" { vtf("") }
test "tcfail007" { vtf("") }
test "tcfail008" { vtf("") }
test "tcfail009" { vtf("") }
test "tcfail010" { vtf("") }
test "tcfail011" { vtf("") }
test "tcfail012" { vtf("") }
test "tcfail013" { vtf("") }
test "tcfail014" { vtf("") }
test "tcfail015" { vtf("") }
test "tcfail016" { vtf("") }
test "tcfail017" { vtf("") }
test "tcfail018" { vtf("") }
test "tcfail019" { vtf("") }
test "tcfail020" { vtf("") }
test "tcfail021" { vtf("") }
test "tcfail023" { vtf("") }
test "tcfail027" { vtf("") }
test "tcfail028" { vtf("") }
test "tcfail029" { vtf("") }
test "tcfail030" { vtf("") }
test "tcfail031" { vtf("") }
test "tcfail032" { vtf("") }
test "tcfail033" { vtf("") }
test "tcfail034" { vtf("") }
test "tcfail035" { vtf("") }
test "tcfail036" { vtf("") }
test "tcfail037" { vtf("") }
test "tcfail038" { vtf("") }
test "tcfail039" { vtf("") }
test "tcfail040" { vtf("") }
test "tcfail042" { vtf("") }
test "tcfail043" { vtf("") }
test "tcfail044" { vtf("") }
test "tcfail045" { vtf("-fglasgow-exts -package lang") }
test "tcfail046" { vtf("") }
test "tcfail047" { vtf("") }
test "tcfail048" { vtf("") }
test "tcfail049" { vtf("") }
test "tcfail050" { vtf("") }
test "tcfail051" { vtf("") }
test "tcfail052" { vtf("") }
test "tcfail053" { vtf("") }
test "tcfail054" { vtf("") }
test "tcfail055" { vtf("") }
test "tcfail056" { vtf("") }
test "tcfail057" { vtf("") }
test "tcfail058" { vtf("") }
test "tcfail061" { vtf("") }
test "tcfail062" { vtf("") }
test "tcfail063" { vtf("") }
test "tcfail065" { vtf("") }
test "tcfail067" { vtf("") }
test "tcfail068" { vtf("-fglasgow-exts -package lang") }
test "tcfail069" { vtf("") }
test "tcfail070" { vtf("") }
test "tcfail071" { vtf("") }
test "tcfail072" { vtf("") }
test "tcfail073" { vtf("") }
test "tcfail075" { vtf("") }
test "tcfail076" { vtf("") }
test "tcfail077" { vtf("") }
test "tcfail078" { vtf("") }
test "tcfail079" { vtf("") }
test "tcfail080" { vtf("-fglasgow-exts -package lang") }
test "tcfail082" { vtf("") }
test "tcfail083" { vtf("") }
test "tcfail084" { vtf("") }
test "tcfail085" { vtf("") }
test "tcfail086" { vtf("") }
test "tcfail087" { vtf("") }
test "tcfail088" { vtf("") }
test "tcfail089" { vtf("-O") }
test "tcfail090" { vtf("") }
test "tcfail091" { vtf("") }
test "tcfail092" { vtf("") }
test "tcfail093" { vtf("") }
